--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "dependencies": {
     "@babel/core": "^7.9.0",
     "@reduxjs/toolkit": "^1.2.5",
+    "konva": "^5.0.2",
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "npm:@hot-loader/react-dom",
     "react-hot-loader": "^4.12.20",
+    "react-konva": "^16.13.0-0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
