--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
   "dependencies": {
     "@babel/core": "^7.9.0",
     "@reduxjs/toolkit": "^1.2.5",
+    "@types/identicon.js": "^2.3.0",
+    "@types/md5": "^2.2.0",
+    "fast-sort": "^2.2.0",
+    "identicon.js": "^2.3.3",
     "konva": "^4.0.3",
     "lodash": "^4.17.15",
+    "md5": "^2.2.1",
+    "nodegit": "^0.26.5",
     "react": "^16.13.1",
     "react-dom": "npm:@hot-loader/react-dom",
     "react-hot-loader": "^4.12.20",
@@ -17,7 +23,8 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "request": "^2.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,7 +60,9 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/lodash": "^4.14.151",
     "@types/node": "^12.0.0",
+    "@types/nodegit": "^0.26.3",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
